2010-06-08  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bug #8305: SQL debug output is not shown in the Backend
	* Added test case t3lib_utility_clientTest.php
	* Fixed bug #14458: getBrowserInfo fails with IE UA Strings

2010-06-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Added feature #14655: Caching framework: Implement PDO backend

2010-06-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual.
	* Fixed bug #14662: htmlArea RTE: Should use t3lib_utility_Client::getBrowserInfo
	* Fixed bug #13062: htmlArea RTE: "non-floating" float value doesn't stick on images
	* Fixed bug #13301: htmlArea RTE: textstyle cannot be applied to full content of block element

2010-06-08  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Fixed formatting of t3lib_PageRenderer_testcase
	* Follow-up to bug #3977: Unit tests for directory permission are too restrictive
	* Follow-up to feature #14277: Fixed unit tests for loading scriptaculous modules

2010-06-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14611: [Install] Content of Input Fields is not displayed completely

2010-06-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14638: Update caching framework to its according FLOW3 revision 4443

2010-06-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments
	* Fixed bug #12486: RTE does not work with Arora

2010-06-06  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #14560: Violation of naming conventions in sprite generation API
	* Fixed issue #14561: Violation of naming conventions in t3lib_compressor

2010-06-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14630: Backend doesn't use $this->pageRenderer

2010-06-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #1294: movie param of flash object not processed by prefixResourcePath(Thanks to Jigal van Hemert)
	* Fixed bug #14629: Copyright Year in Page Source is still wrong (Thanks to Jigal van Hemert)
